welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: ')' expected but identifier found.
	fonctionTest()==false)
        ^SnakeBuggle:9: error: ';' expected but 'false' found.
	fonctionTest()==false)
                        ^